--- a/Pages/PasswordEntryDialog.razor
+++ b/Pages/PasswordEntryDialog.razor
@@ -1,11 +1,11 @@
 ﻿<MudDialog Style="width: 80vw !important;">
     <DialogContent>
         <MudText Typo="Typo.body1">Password details.</MudText>
-        <MudTextField Label="Name" @bind-Value="@Entry.Name" />
-        <MudTextField Label="Username" @bind-Value="@Entry.Username" />
-        <MudTextField Label="Password" @bind-Value="@Entry.Password" />
-        <MudTextField Label="Url" @bind-Value="@Entry.Url" />
-        <MudTextField Label="Note" @bind-Value="@Entry.Note" />
+        <MudTextField Label="Name" @bind-Value="@_localEntry.Name" />
+        <MudTextField Label="Username" @bind-Value="@_localEntry.Username" />
+        <MudTextField Label="Password" @bind-Value="@_localEntry.Password" />
+        <MudTextField Label="Url" @bind-Value="@_localEntry.Url" />
+        <MudTextField Label="Note" @bind-Value="@_localEntry.Note" />
     </DialogContent>
     <DialogActions>
         <MudButton OnClick="Cancel">Cancel</MudButton>
