further nav improvements

--- a/Pages/Register.razor
+++ b/Pages/Register.razor
@@ -32,5 +32,6 @@
                 Registration failed. Please try again.
             </div>
         }
+        <MudText>After registration: request access from site owner to use application.</MudText>
     </div>
 </div>
