--- a/Pages/TopRightDialog.razor
+++ b/Pages/TopRightDialog.razor
@@ -4,7 +4,7 @@
     </DialogContent>
 
     <DialogActions>
-        <MudButton OnClick="CancelTRC">Cancel</MudButton>
-        <MudButton Color="Color.Primary" OnClick="SubmitTRC">Ok</MudButton>
+        @* <MudButton OnClick="CancelTRC">Cancel</MudButton> *@
+        <MudButton Color="Color.Primary" OnClick="Submit">Ok</MudButton>
     </DialogActions>
 </MudDialog>
