--- a/Pages/Register.razor
+++ b/Pages/Register.razor
@@ -1,5 +1,7 @@
 ﻿@page "/register"
 
+<PageTitle>Register</PageTitle>
+
 <div class="container-fluid flex-center">
     <div>
         <h2>Register</h2>
